# syntek-platform

./: .bandit  .commitlintrc.json  .coveragerc  .cspell.json  .dockerignore  .editorconfig  .env.chrome.example  .env.dev.example  .env.example  .env.production.example  .env.staging.example  .env.test.example  .envrc  .flake8  .gitattributes  .gitignore  .graphqlconfig  .hadolint.yaml  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.md  .pylintrc  .shellcheckrc  .tool-versions  .yamllint.yml  CHANGELOG.md  Makefile  README.md  RELEASES.md  SECURITY.md  VERSION-HISTORY.md  package-lock.json  package.json  pyproject.toml  setup.cfg
.claude/: CLAUDE.md  CODING-PRINCIPLES.md  DEVELOPMENT.md  README.md  SECURITY.md  SYNTEK-GUIDE.md  TESTING.md
.claude/commands/: dev.md  production.md  staging.md  test.md
.claude/plugins/: README.md  ab-test-tool.py  chrome-tool.py  db-tool.py  ddev-tool.py  docker-tool.py  env-tool.py  feedback-tool.py  git-tool.py  log-tool.py  metrics-tool.py  optimiser-tool.py  pm-tool.py  project-tool.py  quality-tool.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  ci.yml  clickup-branch-sync.yml  clickup-sync.yml  codeql.yml  dependency-review.yml  deploy-production.yml  deploy-staging.yml  pr-validation.yml
.husky/: README.md  commit-msg  post-merge  pre-commit  pre-push
.zed/: debug.json  settings.json
api/: README.md  __init__.py  dataloaders.py  errors.py  permissions.py  schema.py  security.py  urls.py
api/dataloaders/: __init__.py  audit_log_loader.py  organisation_loader.py  user_loader.py
api/middleware/: __init__.py  auth.py  csrf.py
api/mutations/: auth.py  gdpr.py  legal.py  session.py  totp.py
api/queries/: audit.py  gdpr.py  legal.py  user.py
api/types/: audit.py  auth.py  gdpr.py  legal.py  totp.py  user.py
api/utils/: __init__.py  context.py  converters.py
apps/: README.md  __init__.py
apps/core/: README.md  __init__.py  admin.py  apps.py  exceptions.py  urls.py
config/: README.MD  README.md  __init__.py  asgi.py  celery.py  clickup-config.json  clickup-sprint-mapping.json  clickup-story-mapping.json  urls.py  wsgi.py
config/middleware/: README.md  __init__.py  audit.py  ip_allowlist.py  ratelimit.py  security.py
config/settings/: README.md  __init__.py  base.py  dev.py  production.py  staging.py  test.py
config/utils/: __init__.py  request.py
config/validators/: README.md  __init__.py  common_passwords.txt  password.py
docker/: README.md
docker/dev/: Dockerfile  README.md  docker-compose.yml
docker/production/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docker/staging/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docker/test/: Dockerfile  README.md  docker-compose.yml
docs/: DEVELOPER-SETUP.md  DOTFILES.md  README.md  VERSIONS.md
docs/API/: AUTHENTICATION-API.md
docs/ARCHITECTURE/: CMS-PLATFORM-PLAN.md  README.md
docs/AUTH/: README.md
docs/BACKEND/: README.md
docs/DATABASE/: README.md
docs/DEBUG/: README.md
docs/DEVOPS/: CICD-GITHUB-ACTIONS.MD  CICD-GITHUB-ACTIONS.md  DEPLOYMENT-GUIDE.md  README.md  UV-MIGRATION-GUIDE.md  UV-QUICK-REFERENCE.md
docs/GDPR/: COMPLIANCE-ASSESSMENT-2026-01-03.md  README.md
docs/LOGGING/: IMPLEMENTATION-PLAN-2026-01-03.md  README.md
docs/METRICS/: PERFORMANCE-BENCHMARKS.md  README.md  config.json
docs/PLANS/: README.md  US-001-USER-AUTHENTICATION.md
docs/PM-INTEGRATION/: CLICKUP-INTEGRATION-SUMMARY.MD  CLICKUP-INTEGRATION-SUMMARY.md  CLICKUP-SYNC-SUMMARY.md  GITHUB-SECRETS.MD  GITHUB-SECRETS.md  INTEGRATION-STATUS.md  QUICK-REFERENCE.MD  QUICK-REFERENCE.md  README.MD  README.md  SETUP-GUIDE.MD  SETUP-GUIDE.md  TROUBLESHOOTING.MD  TROUBLESHOOTING.md
docs/PRETTIER/: PRETTIER-IMPLEMENTATION-SUMMARY.md  PRETTIER-SETUP.md  README.md
docs/QA/: README.md
docs/REFACTORING/: README.md
docs/REVIEWS/: CODE-REVIEW-2026-01-03.md  README.md  REVIEW-CI-WORKFLOWS-2026-01-06.md  REVIEW-HUSKY-HOOKS-UPDATE-2026-01-06.MD  REVIEW-HUSKY-HOOKS-UPDATE-2026-01-06.md
docs/SECURITY/: INCIDENT-RESPONSE-PROCEDURES.md  README.md  SECURITY-IMPLEMENTATION-SUMMARY.md  SECURITY-QUICK-REFERENCE.md  SECURITY.md
docs/SPRINTS/: QUICK-REFERENCE.md  README.md  SPRINT-01-CORE-AUTHENTICATION.md  SPRINT-02-USER-MANAGEMENT-GRAPHQL.md  SPRINT-03-ORGANISATION-CACHING.md  SPRINT-04-AUDIT-SECURITY.md  SPRINT-05-DESIGN-TOKENS-PART-1.md  SPRINT-06-DESIGN-TOKENS-PART-2.md  SPRINT-07-CMS-FOUNDATION-PART-1.md  SPRINT-08-CMS-FOUNDATION-PART-2.md  SPRINT-09-MEDIA-LIBRARY.md  SPRINT-10-CONTENT-BRANCHING.md  SPRINT-11-PAGE-PUBLICATION.md  SPRINT-12-TEMPLATE-SYSTEM-PART-1.md  SPRINT-13-TEMPLATE-SYSTEM-PART-2.md  SPRINT-14-SHARED-UI-LIBRARY-PART-1.md  SPRINT-15-SHARED-UI-LIBRARY-PART-2.md  SPRINT-16-INTEGRATIONS-FRAMEWORK.md  SPRINT-17-INTEGRATIONS-PART-2.md  SPRINT-18-SAAS-EMAIL-SERVICE-PART-1.md  SPRINT-19-SAAS-EMAIL-SERVICE-PART-2.md  SPRINT-20-CLOUD-DOCUMENTS-PART-1.md  SPRINT-21-CLOUD-DOCUMENTS-PART-2.md  SPRINT-22-PASSWORD-MANAGER-PART-1.md  SPRINT-23-PASSWORD-MANAGER-PART-2.md  SPRINT-24-AI-INTEGRATION-PART-1.md  SPRINT-25-AI-INTEGRATION-PART-2.md  SPRINT-26-ENVIRONMENT-SECRETS.md  SPRINT-27-INITIAL-SETUP-WIZARD-PART-1.md  SPRINT-28-INITIAL-SETUP-WIZARD-PART-2.md  SPRINT-29-DEPLOYMENT-PIPELINE-PART-1.md  SPRINT-30-DEPLOYMENT-PIPELINE-PART-2.md  SPRINT-SUMMARY.md
docs/STORIES/: DEVELOPMENT-ROADMAP.md  QUICK-REFERENCE.md  README.md  SAAS-COVERAGE-SUMMARY.md  SAAS-PRODUCTS-COMPLETION-REPORT.md  US-001-USER-AUTHENTICATION.md  US-002-LOGIN-WITH-2FA.md  US-003-PASSWORD-RESET.md  US-004-ORGANISATION-SETUP.md  US-005-DESIGN-TOKEN-SYSTEM.md  US-006-CMS-PAGE-CREATION.md  US-007-CONTENT-BRANCHING.md  US-008-TEMPLATE-SYSTEM.md  US-009-MEDIA-LIBRARY.md  US-010-PAGE-PUBLICATION.md  US-011-GRAPHQL-API.md  US-012-AUDIT-LOGGING.md  US-013-CACHING-SYSTEM.md  US-015-AI-INTEGRATION.md  (+8 more)
scripts/: README.md  run-ci-locally.sh  setup-ci.sh  setup-prettier.sh
static/: README.md
templates/: README.md
tests/: README.md  __init__.py  conftest.py
(+217 files in other folders)
