[metadata]
name = backend-template
version = 0.1.0
description = Django/Wagtail backend with PostgreSQL and GraphQL API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/syntek-studio/backend-template
author = Syntek Studio
author_email = team@syntek.studio
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django :: 5.1
    Framework :: Wagtail :: 6
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.13
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
exclude =
    tests
    tests.*
    docs
    build
    dist

[bdist_wheel]
universal = 0

[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings.test
python_files = tests.py test_*.py *_tests.py
python_classes = Test*
python_functions = test_*
testpaths = tests
addopts =
    --verbose
    --strict-markers
    --strict-config
    --cov=.
    --cov-report=html
    --cov-report=term-missing:skip-covered
    --cov-branch
    --no-cov-on-fail
markers =
    slow: marks tests as slow
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    graphql: marks tests for GraphQL API
    wagtail: marks tests for Wagtail CMS

[flake8]
max-line-length = 100
max-complexity = 10
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    migrations,
    node_modules,
    staticfiles,
    media
ignore = E203,E501,W503

[mypy]
python_version = 3.13
warn_return_any = True
warn_unused_configs = True
plugins = mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = config.settings.dev

[coverage:run]
source = .
omit =
    */migrations/*
    */tests/*
    */test_*.py
    */__pycache__/*
    */venv/*
    */.venv/*
branch = True

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
